# WCDG4Sim

./: .gitignore  CMakeLists.txt  README.md  WCDtank.cc  electronics.cc  muon-nonvert.mac  pulses2.C  pulses3.C
ROOT-Scripts/: pulses0.C  pulses2.C  pulses4.C  pulses5.C
WCDtank/: CMakeLists.txt  muon-vert.mac
WCDtank/include/: WCDtankEventAction.hh  WCDtankHit.hh  WCDtankPrimaryGeneratorAction.hh  WCDtankStackingAction.hh
WCDtank/src/: WCDtankActionInitialization.cc  WCDtankDetectorConstructor.cc  WCDtankEventAction.cc  WCDtankHit.cc  WCDtankPrimaryGeneratorAction.cc  WCDtankRunAction.cc  WCDtankSensitiveDetector.cc  WCDtankStackingAction.cc  WCDtankSteppingAction.cc
cla/: CMakeLists.txt
elec/: CMakeLists.txt  electronics.cc  pulses.C  pulses3.C
elec/include/: elecADC.hh  elecTypes.hh  elecVoltageSignal.hh  elecWCDtankPMTdata.hh
elec/src/: elecADC.cc  elecRCequivalent.cc  elecVoltageSignal.cc  elecWCDtankPMTdata.cc
include/electronics/: elecADC.hh  elecRCequivalent.hh  elecTypes.hh
src/WCDtank/: WCDtankPrimaryGeneratorAction.cc  WCDtankRunAction.cc
src/electronics/: elecADC.cc  elecRCequivalent.cc  elecWCDtankPMTdata.cc
